--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/12/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.1&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">28.5&#176;F</td>
+        <td class="data">25.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">11%</td>
+        <td class="data">10%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.829 inHg (-0.054)</td>
+        <td class="data">29.830 inHg (-0.050)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">14 mph SSW (202&#176;)</td>
+        <td class="data">13 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.4&#176;F</td>
+        <td class="data">76.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,20 +237,20 @@
         <td class="data new_row hilo_day">
           <span title="01:01:40 PM">
             50.3</span><br/>
-          <span title="04:00:22 PM">
-            26.3</span>
+          <span title="04:07:32 PM">
+            25.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
             58.4</span><br/>
-          <span title="04:00:22 PM (Saturday)">
-            26.3</span>
+          <span title="04:07:32 PM (Saturday)">
+            25.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/12/2020 04:00:22 PM">
-            26.3</span>
+          <span title="09/12/2020 04:07:32 PM">
+            25.9</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="03:46:00 PM">
-            19</span><br/>
-          197
+          <span title="04:04:14 PM">
+            22</span><br/>
+          196
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:46:00 PM (Saturday)">
-            19</span><br/>
-          197
+          <span title="04:04:14 PM (Saturday)">
+            22</span><br/>
+          196
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          189
+          188
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          217
+          216
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          333
+          332
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:02:02 PM">
-            76.4</span><br/>
+          <span title="04:07:02 PM">
+            76.7</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 1 hour, 17 minutes</td>
+      <td class="data">11 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 1 hour, 17 minutes</td>
+      <td class="data">11 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
