--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 06:04:00 PM</p>
+    <p class="lastupdate">09/12/2020 06:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.1&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.1&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.1&#176;F</td>
+        <td class="data">85.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">31.3&#176;F</td>
+        <td class="data">30.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.829 inHg (-0.003)</td>
+        <td class="data">29.827 inHg (-0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">8 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.5&#176;F</td>
+        <td class="data">78.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          311
+          310
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:02:02 PM">
-            78.5</span><br/>
+          <span title="06:08:02 PM">
+            78.6</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 3 hours, 17 minutes</td>
+      <td class="data">11 days, 3 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 3 hours, 17 minutes</td>
+      <td class="data">11 days, 3 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
