--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 07:59:00 PM</p>
+    <p class="lastupdate">09/12/2020 08:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">73.2&#176;F</td>
+        <td class="data">72.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">73.2&#176;F</td>
+        <td class="data">72.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">73.2&#176;F</td>
+        <td class="data">72.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">37.2&#176;F</td>
+        <td class="data">38.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">27%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.845 inHg (0.021)</td>
+        <td class="data">29.847 inHg (0.025)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph SW (225&#176;)</td>
+        <td class="data">4 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          302
+          301
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 5 hours, 12 minutes</td>
+      <td class="data">11 days, 5 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 5 hours, 12 minutes</td>
+      <td class="data">11 days, 5 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
